Add types for the userm search result
