# packages/userm/src/schema/user-links.ts
@@ -67,6 +67,13 @@ export interface UserLinks {
      * @memberof UserLinks
      * @deprecated
      */
+    'assign-substitute'?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof UserLinks
+     * @deprecated
+     */
     'remove-from'?: string;
     /**
      * 
@@ -75,11 +82,4 @@ export interface UserLinks {
      * @deprecated
      */
     'add-to'?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof UserLinks
-     * @deprecated
-     */
-    'assign-substitute'?: string;
 }
